# zephyr-display-lvgl-imu

./: CMakeLists.txt  DEVELOPMENT.md  README.md  prj.conf  vscode.code-workspace  zephyr-display-lvgl-imu.code-workspace
boards/: esp32s3_devkitc.conf  esp32s3_devkitc.overlay  nrf5340dk_nrf5340_cpuapp.conf  nrf5340dk_nrf5340_cpuapp.overlay
src/: display.c  display.h  imu.c  imu.h  main.c  main_shawn.c
